# leanrl

./: CLAUDE.md  README.md  eval_math.py  eval_swe.py  eval_swe_oracle.py  program.md  pyproject.toml
configs/: math_grpo_1.5b.yaml  math_grpo_1.5b_colocated.yaml  swe_grpo_1.5b.yaml
leanrl/: __init__.py  experience.py  grpo.py  models.py  rollout.py  trainer.py
leanrl/agent/: multi_turn.py  sandbox.py  single_turn.py
leanrl/data/: dataset.py
leanrl/reward/: math_reward.py  swe_reward.py
leanrl/utils/: config.py  logging.py
scripts/: eval_math.py  eval_swe.py  eval_swe_oracle.py  setup_swe_docker.py  setup_swe_docker.sh  train_math.sh  train_swe.sh
tests/: test_eval_swe.py  test_grpo.py  test_multi_turn.py  test_rollout.py  test_sandbox.py  test_trainer.py
