[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leanrl"
version = "0.1.0"
description = "A minimal RL post-training framework for LLMs using Ray + PyTorch + vLLM"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "torch==2.8.0",
    "transformers>=4.55.2,<5.0",
    "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.8cxx11abiTRUE-cp312-cp312-linux_x86_64.whl ; python_version == '3.12' and platform_system == 'Linux'",
    "vllm==0.11.0",
    "ray>=2.38",
    "deepspeed>=0.15",
    "mpi4py",
    "datasets",
    "wandb",
    "docker",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
leanrl-train = "leanrl.trainer:main"

[tool.setuptools.packages.find]
include = ["leanrl*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
